# node-health-watcher

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: alerting.example.yaml  nodes.example.yaml  thresholds.example.yaml
deploy/: deployment.yaml
node_health_watcher/: __init__.py  __main__.py  config.py  scheduler.py
node_health_watcher/alert/: __init__.py  common.py  dedup.py  dingtalk.py  feishu.py
node_health_watcher/checks/: __init__.py  base.py
node_health_watcher/transport/: __init__.py  executor.py  ssh.py
tests/: test_alert_signing.py  test_config.py  test_dedup.py
